# bank-statement-parser

./: .gitignore  README.md  TODO.md  pdfextractor.py  procesador_resumenes_titular_visa.py  procesador_resumenes_totales_mastercard.py  procesador_resumenes_totales_visa.py  procesador_resumenes_visa.py  pyproject.toml  run.py
docs/: parsing.md  schema.md
hsbc_parser/: __init__.py  cli.py  dispatcher.py  export.py  logging_utils.py
hsbc_parser/parsers/: base.py  cuenta.py  mastercard.py  types.py  utils.py  visa.py
tests/: test_fixtures_parsers.py  test_sanity.py  test_text_fixtures_full_parsers.py
tests/fixtures/: cuenta_full_page.txt  mastercard_full_page.txt  visa_full_page.txt
